--- a/FEEDBACK/res/layout/activity_reviewing.xml
+++ b/FEEDBACK/res/layout/activity_reviewing.xml
@@ -1,58 +1,95 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.feedback.Review" >
-
+    android:layout_height="match_parent" >
+    
+    <TextView
+    android:id="@+id/textView1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginLeft="21dp"
+    android:layout_marginTop="80dp"
+    android:text="subject" />
+    
+    <TextView
+    android:id="@+id/textView2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignLeft="@+id/textView1"
+    android:layout_below="@+id/textView1"
+    android:layout_marginTop="38dp"
+    android:text="Comment" />
+    
+    <TextView
+    android:id="@+id/textView3"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignLeft="@+id/textView2"
+    android:layout_below="@+id/textView2"
+    android:layout_marginTop="56dp"
+    android:text="Rate" />
+    
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/ratingBar1"
-                android:layout_alignStart="@+id/ratingBar1"
+        android:layout_alignBaseline="@+id/textView2"
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_alignRight="@+id/subject"
+        android:ems="10" >
         
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="45dp"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        android:minHeight="@dimen/abc_search_view_text_min_width" >
-
         <requestFocus />
     </EditText>
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText1"
-                android:layout_alignStart="@+id/editText1"
-        
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="25dp"
-        android:text="@string/fddef" />
-
-    <Button
-        android:id="@+id/button111"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/ratingBar1"
-        android:layout_alignStart="@+id/ratingBar1"
-        
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="54dp"
-        android:text="@string/sendfb" />
-
+    
+    <EditText
+    android:id="@+id/subject"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_above="@+id/textView2"
+    android:layout_alignLeft="@+id/comment"
+    android:ems="10" />
+    
     <RatingBar
-        android:id="@+id/ratingBar1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp" />
-
+    android:id="@+id/rate"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignLeft="@+id/comment"
+    android:layout_below="@+id/comment"
+    android:layout_marginTop="21dp" />
+    
+    <Button
+    android:id="@+id/button2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignBaseline="@+id/button1"
+    android:layout_alignBottom="@+id/button1"
+    android:layout_alignParentRight="true"
+    android:layout_marginRight="46dp"
+    android:onClick="close"
+    android:text="@string/close" />
+    
+    <Button
+    android:id="@+id/button1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_above="@+id/button3"
+    android:layout_marginBottom="69dp"
+    android:layout_marginRight="11dp"
+    android:layout_toLeftOf="@+id/rate"
+    android:onClick="data"
+    android:text="@string/create" />
+    
+    <Button
+    android:id="@+id/button3"
+    style="?android:attr/buttonStyleSmall"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignLeft="@+id/button1"
+    android:layout_alignParentBottom="true"
+    android:layout_marginBottom="38dp"
+    android:onClick="showdata"
+    android:text="Feedback" />
+    
 </RelativeLayout>
